Mistakes have been made + lots of fixes