@@ -90,7 +90,7 @@ public class PathGenerator {
                 return;
             }
 
-            current = closestFoundNodes.get(0);
+            current = closestFoundNodes.getFirst();
 
             if (!open.isEmpty()) {
                 repathNode.setParent(current);
@@ -111,7 +111,7 @@ public class PathGenerator {
             return;
         }
 
-        var lastNode = path.getNodes().get(path.getNodes().size() - 1);
+        var lastNode = path.getNodes().getLast();
         if (getDistanceSquared(lastNode.x(), lastNode.y(), lastNode.z(), target) > (closeDistance * closeDistance)) {
             path.setState(PPath.PathState.BEST_EFFORT);
             return;
